# Fill_Down_Demo

./: .dockerignore  .gitignore  Dockerfile  LICENSE  LICENSE.md  README.md  STARTUP.md  TESTING_GUIDE.md  cli.py  config.yaml  main.py  pyproject.toml  requirements-semantic.txt  requirements.txt  smoke_test.py
.streamlit/: config.toml
data/: sample_transactions.csv  sample_transactions.xlsx
models/: __init__.py  schemas.py
src/: __init__.py  config.py  data_loader.py  dependencies.py  exporter.py  fill_down_engine.py  ml_classifier.py  review_queue.py  rules_manager.py  similarity.py  spreadsheet_helpers.py
tests/: conftest.py  test_access_flow.py  test_account_codes.py  test_data_loader.py  test_demo_reset.py  test_e2e_v22.py  test_fill_down_engine.py  test_ml_classifier.py  test_review_and_export.py  test_rules_manager.py  test_similarity.py  test_spreadsheet_helpers.py
ui/: __init__.py  access.py  common.py  guide.py  landing.py  panels.py  rule_creation.py  setup.py  sidebar.py  spreadsheet.py
utils/: __init__.py  account_codes.py  demo_utils.py  logging_setup.py  sample_data.py  storage.py
